tests/specs/check/jsdoc_import_decl/check.out
Download http://localhost:4545/add.ts
Check file:///[WILDLINE]main.js
TS2345 [ERROR]: Argument of type 'string' is not assignable to parameter of type '(a: number, b: number) => number'.
addHere("");
        ~~
    at file:///[WILDLINE]main.js:12:9

error: Type checking failed.
